--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <label for="password">Password:</label>
         <input type="password" id="password" required><br><br>
 
-        <label for="dob">Date of Birth:</label>
+        <label for="dob" min="1967-11-09" max="2004-11-09">Date of Birth:</label>
         <input type="date" id="dob" required><br><br>
 
         <label>
