--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <label for="password">Password:</label>
         <input type="password" id="password" required><br><br>
 
-        <label for="dob" min="1967-11-09" max="2004-11-09">Date of Birth:</label>
-        <input type="date" id="dob" required><br><br>
+        <label for="dob" >Date of Birth:</label>
+        <input type="date" id="dob" min="1967-11-09" max="2004-11-09" required><br><br>
 
         <label>
             <input type="checkbox" id="terms"> I agree to the terms and conditions
