--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head>
     <title>Form with LocalStorage</title>
     <style>
         table {
-            width: 100%; 
+            width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
         }
@@ -31,8 +31,8 @@
         <label for="password">Password:</label>
         <input type="password" id="password" required><br><br>
 
-        <label for="dob" >Date of Birth:</label>
-        <input type="date" id="dob" min="1967-11-09" max="2004-11-09" required><br><br>
+        <label for="dob">Date of Birth:</label>
+        <input type="date" id="dob" required><br><br>
 
         <label>
             <input type="checkbox" id="terms"> I agree to the terms and conditions
@@ -91,8 +91,8 @@
             tableBody.innerHTML = ''; // Clear previous entries
 
             if (storedData.length > 0) {
-                storedData.forEach(user => {
-                    const row = `<tr> 
+                storedData.slice().reverse().forEach(user => {
+                    const row = `<tr>
                         <td>${user.name}</td>
                         <td>${user.email}</td>
                         <td>${user.password}</td>
@@ -111,3 +111,4 @@
     </script>
 </body>
 </html>
+
