--- a/index.html
+++ b/index.html
@@ -2,47 +2,32 @@
 <html>
 <head>
     <title>Form with LocalStorage</title>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #4CAF50;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h2>User Registration Form</h2>
-    <form id="userForm">
-        <label for="name">Name:</label>
-        <input type="text" id="name" required><br><br>
+    <form id="UserForm">
+        <label for="Name">Name:</label>
+        <input type="text" id="Name" required><br><br>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" required><br><br>
+        <label for="Email">Email:</label>
+        <input type="email" id="Email" required><br><br>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" required><br><br>
+        <label for="Password">Password:</label>
+        <input type="password" id="Password" required><br><br>
 
-        <label for="dob">Date of Birth:</label>
-        <input type="date" id="dob" required><br><br>
+        <label for="Dob">Date of Birth:</label>
+        <input type="date" id="Dob" required><br><br>
 
         <label>
-            <input type="checkbox" id="terms"> I agree to the terms and conditions
+            <input type="checkbox" id="Terms"> I agree to the terms and conditions
         </label><br><br>
 
         <button type="submit">Submit</button>
     </form>
 
     <h3>Stored Data</h3>
-    <table id="dataTable">
+    <table id="DataTable">
         <thead>
             <tr>
                 <th>Name</th>
@@ -52,63 +37,11 @@
                 <th>Accepted Terms?</th>
             </tr>
         </thead>
-        <tbody id="tableBody">
+        <tbody id="TableBody">
             <!-- Data will be displayed here -->
         </tbody>
     </table>
 
-    <script>
-        document.getElementById('userForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const name = document.getElementById('name').value;
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-            const dob = document.getElementById('dob').value;
-            const terms = document.getElementById('terms').checked;
-
-            if (!terms) {
-                alert("You must agree to the terms and conditions.");
-                return;
-            }
-
-            // Retrieve existing data from localStorage
-            const existingData = JSON.parse(localStorage.getItem('users')) || [];
-
-            // Add new user data
-            existingData.push({ name, email, password, dob, terms });
-
-            // Store updated data in localStorage
-            localStorage.setItem('users', JSON.stringify(existingData));
-
-            displayStoredData();
-        });
-
-        function displayStoredData() {
-            const storedData = JSON.parse(localStorage.getItem('users')) || [];
-            const tableBody = document.getElementById('tableBody');
-
-            tableBody.innerHTML = ''; // Clear previous entries
-
-            if (storedData.length > 0) {
-                storedData.slice().reverse().forEach(user => {
-                    const row = `<tr>
-                        <td>${user.name}</td>
-                        <td>${user.email}</td>
-                        <td>${user.password}</td>
-                        <td>${user.dob}</td>
-                        <td>${user.terms ? 'Yes' : 'No'}</td>
-                    </tr>`;
-                    tableBody.innerHTML += row;
-                });
-            } else {
-                tableBody.innerHTML = `<tr><td colspan="5">No data stored yet.</td></tr>`;
-            }
-        }
-
-        // Display stored data on page load
-        window.onload = displayStoredData;
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
-
