--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
 </head>
 <body>
     <h2>User Registration Form</h2>
-    <form id="UserForm">
-        <label for="Name">Name:</label>
-        <input type="text" id="Name" required><br><br>
+    <form id="userform">
+        <label for="name">Name:</label>
+        <input type="text" id="name" required><br><br>
 
-        <label for="Email">Email:</label>
-        <input type="email" id="Email" required><br><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" required><br><br>
 
-        <label for="Password">Password:</label>
-        <input type="password" id="Password" required><br><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" required><br><br>
 
-        <label for="Dob">Date of Birth:</label>
-        <input type="date" id="Dob" required><br><br>
+        <label for="dob">Date of Birth:</label>
+        <input type="date" id="dob" required><br><br>
 
         <label>
-            <input type="checkbox" id="Terms"> I agree to the terms and conditions
+            <input type="checkbox" id="terms"> I agree to the terms and conditions
         </label><br><br>
 
         <button type="submit">Submit</button>
     </form>
 
     <h3>Stored Data</h3>
-    <table id="DataTable">
+    <table id="datatable">
         <thead>
             <tr>
                 <th>Name</th>
@@ -37,7 +37,7 @@
                 <th>Accepted Terms?</th>
             </tr>
         </thead>
-        <tbody id="TableBody">
+        <tbody id="tablebody">
             <!-- Data will be displayed here -->
         </tbody>
     </table>
