--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="password" id="password" required><br><br>
 
         <label for="dob">Date of Birth:</label>
-        <input type="date" id="dob" min="1968-03-16" max="2006-03-16" required><br><br>
+        <input type="date" id="dob" required><br><br>
 
         <label>
             <input type="checkbox" id="terms"> I agree to the terms and conditions
@@ -45,3 +45,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
